--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,15 @@
-@import url("https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
 * {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-}
-html {
   
-  font-family: "Mulish", sans-serif;
+}
+
+html {
+
+  font-family: 'Open Sans', sans-serif;
   font-weight: 600;
   background-repeat: no-repeat;
 }
